<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/PickToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/PickToolbarTheme"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_preview_bottom_gallery"
        android:background="@color/album_preview_overlay"
        app:layout_constraintBottom_toTopOf="@+id/vBottomLine"/>

    <View
        android:id="@+id/vBottomLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_preview_bottom_line"
        android:background="@color/pick_title_color"
        app:layout_constraintBottom_toTopOf="@+id/rlBottom"/>

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/picker_toolbar_height"
        android:background="@color/album_preview_overlay"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvEdit"
            style="@style/BottomToolText"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/pick_media_edit"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llCenter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:id="@+id/vCenter"
                android:layout_width="@dimen/pick_radio_size"
                android:layout_height="@dimen/pick_radio_size"
                android:layout_gravity="center_vertical"
                android:background="@drawable/pick_radio_checked"/>

            <TextView
                android:id="@+id/tvCenter"
                style="@style/BottomToolText"
                android:paddingLeft="@dimen/pick_radio_margin"
                android:paddingRight="0dp"
                android:text="@string/pick_media_origin_picture"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/check"
                style="@style/PickCheckbox"
                android:layout_gravity="center_vertical"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvSelect"
                style="@style/BottomToolText"
                android:paddingLeft="0dp"
                android:text="@string/pick_media_select"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>